--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
 					</ul>*/ -->
 					<ul class="header-links pull-right" >
-						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
+						
 						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
 					</ul>
 				</div>
@@ -58,7 +58,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="#" class="logo">
-									<img src="img/logo.png" alt="">
+									<h1 style=color:white;>TechTrain</h1>
 								</a>
 							</div>
 						</div>
