--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
 					</ul>*/ -->
 					<ul class="header-links pull-right" >
-
+						
 						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
 					</ul>
 				</div>
@@ -1001,11 +1001,11 @@
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
 								<h3 class="footer-title">About Us</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+								<p>Tech Train Solutions and accessories is a IT support and accessories retailing shop which serve its customers with care.</p>
 								<ul class="footer-links">
-									<li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-									<li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-									<li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+									<li><a href="#"><i class="fa fa-map-marker"></i>Cape Coast, Central Region, Ghana. UCC campus, opposite science market.</a></li>
+									<li><a href="#"><i class="fa fa-phone"></i>+233-550-3757-10</a></li>
+									<li><a href="#"><i class="fa fa-envelope-o"></i>forsonimma1@gmail.com</a></li>
 								</ul>
 							</div>
 						</div>
